...
            controller: _tabController,
            indicatorColor: Colors.white,
            labelColor: Colors.white,
            unselectedLabelColor: Colors.white70,
            tabs: const [
              Tab(text: 'Profile', icon: Icon(Icons.person)),
              Tab(text: 'My Courses', icon: Icon(Icons.school)),
              Tab(text: 'Backlog', icon: Icon(Icons.task)),
              Tab(text: 'Gradebook', icon: Icon(Icons.grade)),
              Tab(text: 'Calendar', icon: Icon(Icons.calendar_month)),
            ],
          ),
        ),
...
